--- a/app/partials/lists.html
+++ b/app/partials/lists.html
@@ -11,8 +11,15 @@
                         <th>Quantity</th><th>Item</th><th></th>
                     <tr ng-repeat="item in list.items">
                     <td style="width:40px"><a href="#" editable-number="item.qty" required onbeforesave="changeQty(list._id, item._id, $data)">{{item.qty}}</a></td>
-                    <td><a href="#" editable-text="item.itemName" required onbeforesave="updateItem(list._id, item, $data)">{{ item.itemName }}</a></td>
-                    <td style="width:80px"><a href ng-click="deleteItem(list._id, item)"><span class="glyphicon glyphicon-remove"></span> Delete</a></td>
+                    <td>
+                        <a ng-if="!item.got" href="#" editable-text="item.itemName" required onbeforesave="updateItem(list._id, item, $data)">{{ item.itemName }}</a>
+                        <span ng-if="item.got"><strike>{{item.itemName}}</strike></span>
+                    </td>
+                    <td style="width:160px">
+                        <a ng-if="!item.got" href ng-click="gotItem(list._id, item._id)"><span class="glyphicon glyphicon-ok"></span> Got It! </a>
+                        <a ng-if="item.got" href ng-click="gotItem(list._id, item._id)"><span class="glyphicon glyphicon-minus"></span> Undo </a>
+                        <a href ng-click="deleteItem(list._id, item)"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                    </td>
                     </tr>
                 </table>
             </div>
